@@ -35,6 +35,8 @@ tests_num:
 	data 0.1236,    "#.##e-000",        "1.24e-001"
 	data 0.000000000125,                "#.##e-0",          "1.25e-10"
 	data 0.999999,  "#.00e+000",        "1.00e+000"
+	data 9.9e+20,   "#",                "990000000000000000000"
+	data 9.9e-100,  "###################e+#", "9900000000000000000e-118"
 
 	data -0.1236,   "##0.00%",          "-12.36%"
     data -123,      !"\"asd\\\"",        !"asd\\"
@@ -62,6 +64,8 @@ tests_num:
 	data -0.1236,   "#.##e-000",        "-1.24e-001"
 	data -0.000000000125,               "#.##e-0",          "-1.25e-10"
 	data -0.999999, "#.00e+000",        "-1.00e+000"
+	data -9.9e+20,  "#",                "-990000000000000000000"
+	data -9.9e-100, "###################e+#", "-9900000000000000000e-118"
 
 	data -0.1236,   "##0.00%-",         "12.36%-"
     data -123,      !"\"asd\\\"",        !"asd\\"
@@ -89,6 +93,8 @@ tests_num:
 	data -0.1236,   "#.##e-000-",       "1.24e-001-"
 	data -0.000000000125,               "#.##e-0-",          "1.25e-10-"
 	data -0.999999, "#.00e+000-",       "1.00e+000-"
+	data -9.9e+20,  "#-",               "990000000000000000000-"
+	data -9.9e-100, "###################e+#-", "9900000000000000000e-118-"
 
 	data 0.1236,    "##0.00%-",         "12.36%"
     data 123,       !"\"asd\\\"",        !"asd\\"
@@ -116,6 +122,8 @@ tests_num:
 	data 0.1236,    "#.##e-000-",       "1.24e-001"
 	data 0.000000000125,                "#.##e-0-",          "1.25e-10"
 	data 0.999999,  "#.00e+000-",       "1.00e+000"
+	data 9.9e+20,   "#-",               "990000000000000000000"
+	data 9.9e-100, "###################e+#-", "9900000000000000000e-118"
 
 	data 1234,      "###,0.00",         "1,234.00"
 	data 1234567,   "#,#,#,0.00",       "1,234,567.00"
